welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:30: error: too many arguments for method retourne: ()Unit
  retourne(14)
          ^